# waybar-menu-fredon

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: menu-config.json
ui/: __init__.py  constants.py
ui/commands/: command_executor.py
ui/widgets/: custom_button.py
ui/windows/: main_window.py
