
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waybar-menu-fredon"
version = "0.1.0"
description = "Modern menu interface for Hyprland"
requires-python = ">=3.9"
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-Frameless-Window>=0.2.0",
    "BlurWindow>=1.2.1",
    "dataclasses-json>=0.6.0",
    "typing_extensions>=4.14.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["./main"]

[tool.uv]
dev-dependencies = ["ruff>=0.5.0", "mypy>=1.10.0"]


[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "PL",  # pylint
    "RUF",  # ruff-specific rules
]
ignore = []
